# quda-QKXTM-Multigrid-PlugIn

./: .gitignore  CMakeLists.txt  README
include/: QKXTM_read_conf.h  qudaQKXTM.h  qudaQKXTM_Kepler.h  qudaQKXTM_utils.h
lib/: CMakeLists.txt  qudaQKXTM.cpp  qudaQKXTM_Contraction.cpp  qudaQKXTM_Contraction_Kepler.cpp  qudaQKXTM_Deflation.cpp  qudaQKXTM_Deflation_Kepler.cpp  qudaQKXTM_Field.cpp  qudaQKXTM_Gauge.cpp  qudaQKXTM_Kepler.cpp  qudaQKXTM_Kepler_utils.cpp  qudaQKXTM_Loops.cpp  qudaQKXTM_Loops_Kepler.cpp  qudaQKXTM_Propagator.cpp  qudaQKXTM_Vector.cpp  qudaQKXTM_interface.cpp  qudaQKXTM_kernels.cu  qudaQKXTM_utils.cpp
lib/code_pieces/: contractPseudoscalarMesons_core.h  contractPseudoscalarMesons_core_PosSpace.h  fixSinkContractions_oneD_core.h  gammas_tm_base.h  gammas_tm_base_cp.h  getVectorProp3D_core.h  performGPU_FT_core.h  print_core.h  projectors_tm_base.h
qkxtm/: CMakeLists.txt  CalcLowModeProjection.cpp  CalcMG_2pt3pt_EvenOdd.cpp  CalcMG_2pt3pt_Kaons.cpp  CalcMG_2pt3pt_Mesons.cpp  CalcMG_2pt3pt_Mesons_db.cpp  CalcMG_2pt3pt_Pions.cpp  CalcMG_Loops_w_oneD_TSM_EvenOdd.cpp  CalcMG_Loops_w_oneD_TSM_wExact.cpp  Calc_Loops.cpp  MG_Bench.cpp  QKXTM_read_conf.h  QKXTM_util.cpp  misc.cpp
tests/: CMakeLists.txt
